tests/paczka1/fuzzy1/38534117.err
Error in line 16: No8 S979 70,8
Error in line 19: No8 A778 93,4
Error in line 2: htkWX S258 74,9
Error in line 22: htkWX A504 92,1
